--- a/bousai_evacuation.html
+++ b/bousai_evacuation.html
@@ -179,6 +179,6 @@
         <img id="gototop-btn" src="images/gototop.svg" alt="このページのトップへ" />
       </div>
     </footer>
-    <script type="module" src="src/script/bousite.ts"></script>
+    <script type="module" src="src/script/bousite_j.js"></script>
   </body>
 </html>
