--- a/bousai_scenario.html
+++ b/bousai_scenario.html
@@ -52,7 +52,9 @@
     <div class="bousai-logo_headline-main">
       <div class="bousai-logo_headline">
         <div class="bousai-logo">
-          <a href="index.html"><img src="images/bousai-logo.svg" alt="防サイトのトップページへ" /></a>
+          <a href="index.html"
+            ><img src="images/bousai-logo.svg" alt="防サイトのトップページへ"
+          /></a>
         </div>
         <div class="page-headline">
           <h1>
@@ -173,7 +175,11 @@
 
             <div id="item17" class="scenario-group upface_op">
               <div class="scenario-item_main">
-                <img class="clickable-image" src="images/scenario_17.gif" alt="高齢者施設の避難　" />
+                <img
+                  class="clickable-image"
+                  src="images/scenario_17.gif"
+                  alt="高齢者施設の避難　"
+                />
               </div>
             </div>
 
@@ -197,7 +203,11 @@
 
             <div id="item21" class="scenario-group upface_op">
               <div class="scenario-item_main">
-                <img class="clickable-image" src="images/scenario_21.gif" alt="乳幼児・妊婦の備え　" />
+                <img
+                  class="clickable-image"
+                  src="images/scenario_21.gif"
+                  alt="乳幼児・妊婦の備え　"
+                />
               </div>
             </div>
 
@@ -239,7 +249,11 @@
 
             <div id="item28" class="scenario-group upface_op">
               <div class="scenario-item_main">
-                <img class="clickable-image" src="images/scenario_28.gif" alt="一人暮らしの備え　" />
+                <img
+                  class="clickable-image"
+                  src="images/scenario_28.gif"
+                  alt="一人暮らしの備え　"
+                />
               </div>
             </div>
 
@@ -299,7 +313,11 @@
 
             <div id="item38" class="scenario-group upface_op">
               <div class="scenario-item_main">
-                <img class="clickable-image" src="images/scenario_38.gif" alt="突風・竜巻から身を守る　" />
+                <img
+                  class="clickable-image"
+                  src="images/scenario_38.gif"
+                  alt="突風・竜巻から身を守る　"
+                />
               </div>
             </div>
             <!-- ** -->
@@ -638,7 +656,8 @@
             <div id="scenario-item17" class="scenario_text scenariohidden">
               <div class="fukidashi-main fukidashi-ta-l-c">
                 <div class="fukidashi-title">
-                  高齢者施設の避難　<span class="newline"><br /></span>豪雨で浸水被害　入所者の安全は？
+                  高齢者施設の避難　<span class="newline"><br /></span
+                  >豪雨で浸水被害　入所者の安全は？
                 </div>
                 <p>
                   災害が発生した時、高齢者施設の入所者にとって、スムーズな避難が難しいことが多い。事前の備えがなかったり、的確な判断ができなかったりすると、重大な結果を招きかねない。外部への避難が遅れた場合には、命を守るために施設の上階など安全な場所にとどまり、難を逃れる対応も必要だ。どういう事態に陥る可能性があるのだろうか。架空のシナリオで考えておきたい。
@@ -1112,7 +1131,7 @@
         <img id="gototop-btn" src="images/gototop.svg" alt="このページのトップへ" />
       </div>
     </footer>
-    <script type="module" src="src/script/bousite.ts"></script>
+    <script type="module" src="src/script/bousite_j.js"></script>
     <script type="module" src="src/script/bousai_scenario.ts"></script>
   </body>
 </html>
