--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#e8c334" />
     <link rel="stylesheet" href="src/style/bousite_top.css" />
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Lightbox2 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
     <title>防サイト</title>
   </head>
@@ -52,9 +57,7 @@
     <div class="bousai-logo_headline-main">
       <div class="bousai-logo_headline">
         <div class="top-bousai-logo">
-          <a href="index.html"
-            ><img src="images/bousai-logo.svg" alt="防サイトのトップページへ"
-          /></a>
+          <a href="index.html"><img src="images/bousai-logo.svg" alt="防サイトのトップページへ" /></a>
         </div>
       </div>
     </div>
@@ -76,15 +79,11 @@
             <div class="content">
               <div class="content-headline-img">
                 <div class="content-img">
-                  <a href="great_kanto_earthquake.html"
-                    ><img src="images/kanto-1.jpg" alt="関東大震災"
-                  /></a>
+                  <a href="great_kanto_earthquake.html"><img src="images/kanto-1.jpg" alt="関東大震災" /></a>
                 </div>
                 <div class="content-headline-right content-headline-pc-left">
                   <h4>
-                    <a href="great_kanto_earthquake.html"
-                      ><img src="images/top_gke_title.svg" alt="関東大震災"
-                    /></a>
+                    <a href="great_kanto_earthquake.html"><img src="images/top_gke_title.svg" alt="関東大震災" /></a>
                   </h4>
                 </div>
               </div>
@@ -186,9 +185,7 @@
             <div class="content">
               <div class="content-headline-img">
                 <div class="content-img">
-                  <a href="bousai_scenario.html"
-                    ><img src="images/kanto-1.jpg" alt="災害のシナリオページへ"
-                  /></a>
+                  <a href="bousai_scenario.html"><img src="images/kanto-1.jpg" alt="災害のシナリオページへ" /></a>
                 </div>
                 <div class="content-headline-left">
                   <h4>
@@ -214,6 +211,6 @@
       </div>
     </footer>
 
-    <script type="module" src="src/script/bousite.ts"></script>
+    <script type="text/javascript" src="src/script/bousite_j.js"></script>
   </body>
 </html>
