--- a/typhoon_heavyrain.html
+++ b/typhoon_heavyrain.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#19170d" />
+
+    <script type="module" crossorigin src="src/script/typhoonrain-98bc4c76.js"></script>
+    <link rel="modulepreload" crossorigin href="src/script/bousite-30f71c01.js" />
+    <link rel="modulepreload" crossorigin href="src/script/auto-992fa033.js" />
+
+    <link rel="stylesheet" href="src/script/bousite-ddb880cf.css" />
     <link rel="stylesheet" href="src/style/typhoon.css" />
+    <link rel="stylesheet" href="src/style/typhoon_heavyrain-33ed51f2.css" />
 
     <title>台風と大雨の災害データ / 防災サイト「防サイト」/</title>
   </head>
@@ -1419,8 +1426,8 @@
         <img id="gototop-btn" src="images/gototop.svg" alt="このページのトップへ" />
       </div>
     </footer>
-    <script type="module" src="src/script/bousite.ts"></script>
-    <script type="module" src="src/script/typhoon_heavyrain_chart.ts"></script>
-    <script type="module" src="src/script/typhoon_heavyrain.ts"></script>
+    <!-- <script type="text/javascript" src="src/script/bousite_j.js"></script>
+    <script type="text/javascript" src="src/script/typhoon_heavyrain_chart.ts"></script>
+    <script type="text/javascript" src="src/script/typhoon_heavyrain.ts"></script> -->
   </body>
 </html>
