--- a/volcanic_eruption.html
+++ b/volcanic_eruption.html
@@ -298,7 +298,7 @@
         <img id="gototop-btn" src="images/gototop.svg" alt="このページのトップへ" />
       </div>
     </footer>
-    <script type="module" src="src/script/bousite.ts"></script>
+    <script type="module" src="src/script/bousite_j.js"></script>
     <script type="module" src="src/script/scrollhint.ts"></script>
   </body>
 </html>
